﻿11/17/2014 0.8.2b
  Fixes #88: Tooltips are no longer laggy.
  Fixes #86: Items in the ME network show their aspects in the A.C.T.

11/17/2014 0.8.1b
  Fixes #82: Prevent recipes with null outputs from crashing the game during aspect registration.
  Removed duplicate entry in language file. Ty Mrkwtkr for noticing ^.^

11/17/2014 0.8.0b
  Fixes #79: Essentia cells now work with the ME IO Port(Please oh please let this never break again)...
  Added conversion methods to API, made API type-safe as stand alone.
  Added cell workbench recipe.
  Bugfix: Fixed security violation in TE parts with GUI.

11/16/2014 0.8.0b
  Minor optimizations.
  Fixes #71: Added view cell support for A.C.T.
  Bugfix: Level emitter aspect now shows tooltip.
  Lots of code clean up.
  Fixed a long standing bug: Essentia cells in a ME chest now update the network when changed via the chest gui.

11/15/2014 0.8.0b
  Fixes #21: Added Essentia Cell Workbench.
  Changed tile entity mapping, support for worlds saved prior to 0.8.0 will be dropped at version 1.0
  Infusion provider has particle effects while active.

11/12/2014 0.8.0b
  REALLY fixed ACT memory leak.
  Fixes #31: Temporary(I hope) fix for false essentia amounts after storage bus voids.

11/11/2014 0.8.0b
  Fixed cell recipe.
  Fixes #77: ACT no longer leaks memory on client side.
  Gearboxes and Providers are now wrenchable.
  Essentia cells can now hold 12 types.
  Fixes #76: Added scrollbar to Essentia terminal.
  Fixes #74: Essentia provider now has suction.

11/8/2014 0.8.0b
  Added Certus Quartz Duplication.
  Added configuration option to disable certus duplication.

11/7/2014 0.8.0b
  Reworked Thaumonomicon layout.
  Added parent nodes.

11/6/2014 0.8.0b
  Added Iron and Thaumium GearBoxes.

11/1/2014 0.7.4b
  Bugfix: Added ME cables to Thuamcraft scanning.
  More API work.

10/31/2014 0.7.4b
  Fixes #73: Added AE2 items/blocks to Thaumcraft scanning.
  Aspect assignment is done by internal examination of crafting recipe.